--- a/components/GameBoard.module.css
+++ b/components/GameBoard.module.css
@@ -1,12 +1,12 @@
 .cell {
-    display: inline-block;
+    display: table-cell;
     width: 50px;
     height: 50px;
     border: 1px solid #333;
     text-align: center;
     font-size: 20px;
     line-height: 50px;
-    color: #fff;
+    color: #ac1919;
 }
 
 .empty {
